[package]
name = "andrew"
version = "0.1.2"
edition = "2021"
publish = false
repository = "https://github.com/alilleybrinker/andrew"
description = "Personal CLI tool for Andrew's common tasks"
homepage = "https://github.com/alilleybrinker/andrew"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = [
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
minijinja = "2.3.1"
minijinja-embed = "2.3.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
